--- a/resources/assets/css/gantt-custom.css
+++ b/resources/assets/css/gantt-custom.css
@@ -68,14 +68,14 @@
 .dark .gantt_grid_data .gantt_row {
     border-bottom-color: var(--fi-color-gray-800) !important;
 }
-.gantt_task_row {
+/* .gantt_task_row {
     border-bottom: 1px dashed var(--fi-color-gray-200) !important;
-}
+} */
 
 /* Priority Colors */
-.gantt_task_line.high { background-color: rgb(239 68 68) !important; border-color: rgb(220 38 38) !important; }
-.gantt_task_line.medium { background-color: rgb(245 158 11) !important; border-color: rgb(217 119 6) !important; }
-.gantt_task_line.low { background-color: rgb(34 197 94) !important; border-color: rgb(22 163 74) !important; }
+.gantt_task_line.high { background-color: var(--gantt-priority-high) !important; border-color: var(--gantt-priority-high) !important; }
+.gantt_task_line.medium { background-color: var(--gantt-priority-medium) !important; border-color: var(--gantt-priority-medium) !important; }
+.gantt_task_line.low { background-color: var(--gantt-priority-low) !important; border-color: var(--gantt-priority-low) !important; }
 
 /* Layout borders */
 .gantt_layout_cell, .gantt_layout_root {
